fixed font wraping on small phones in projects

--- a/gallery/projects/projects.css
+++ b/gallery/projects/projects.css
@@ -79,6 +79,13 @@ h3 {
 }
 
 @media screen and (max-width: 749px) {
+    h2 {
+        font-size: 15vw;
+    }
+
+    h3 {
+        font-size: 10vw;
+    }
 
     .row,
     .grid {
